@@ -151,6 +151,8 @@
  * bugfix in the "list 'remove'" internals
 # (r907)
  * --binary=1/--binary=24 will not pad tiny renderings to _preferred_rendering_width pixels
+# (r937)
+ * corrected the quiet mode (-q) to be quieter
 
                 Version 0.4
 
